--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  confetti: ^0.5.4+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -43,7 +43,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: GiftHubIcon
+      fonts:
+        - asset: GiftHubIcon/GiftHubI.ttf
+    - family: TimesNewRoman
+      fonts:
+        - asset: GiftHubIcon/TimesNewRoman.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -74,3 +80,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+
+
+
+
