--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  intl: ^0.15.8
+  provider: ^4.3.2+2
+  circular_profile_avatar: ^1.0.8
+  image_picker: ^0.6.7+14
+  google_fonts: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
