--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "0.5.3"
+  firebase_auth: ^0.18.1
+  cloud_firestore: ^0.14.1
+  firebase_storage: ^5.0.1
+  provider: ^2.0.1
+  image_picker: ^0.6.7+14
 
 
   # The following adds the Cupertino Icons font to your application.
