--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   circular_profile_avatar: ^1.0.8
   image_picker: ^0.6.7+14
   google_fonts: ^1.1.1
+  flutter_rating_bar: ^3.2.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
