--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^4.3.2+2
+  circular_profile_avatar: ^1.0.8
+  google_fonts: ^1.1.1
+  share: ^0.6.5+4
+  path_provider: ^1.6.11
+  http: ^0.12.0+4
+  flutter_slidable: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +54,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
