--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   google_fonts: ^1.1.1
   flutter_rating_bar: ^3.2.0+1
   share: ^0.6.5+4
+  path_provider: ^1.6.11
+  http: ^0.12.0+4
+  flutter_slidable: ^0.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
