--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^4.3.2+2
+  circular_profile_avatar: ^1.0.8
+  image_picker: ^0.6.7+14
+  google_fonts: ^1.1.1
+  flutter_rating_bar: ^3.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -48,6 +53,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/birthday_cake.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
