--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: 0.5.3
+  firebase_auth: ^0.18.1
+  cloud_firestore: ^0.14.1
+  firebase_storage: ^5.0.1
+  google_sign_in: ^4.5.1
+  intl: ^0.16.1
   provider: ^4.3.2+2
   circular_profile_avatar: ^1.0.8
   image_picker: ^0.6.7+14
   google_fonts: ^1.1.1
-  flutter_rating_bar: ^3.2.0
-
+  flutter_rating_bar: ^3.2.0+1
+  share: ^0.6.5+4
+  path_provider: ^1.6.11
+  http: ^0.12.0+4
+  flutter_slidable: ^0.5.7
+  device_apps: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  confetti: ^0.5.4+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,13 +58,20 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - Assets/google.png
+    - assets/images/birthday_cake.jpg
+  fonts:
+    - family: GiftHubIcon
+      fonts:
+        - asset: GiftHubIcon/GiftHubI.ttf
+    - family: TimesNewRoman
+      fonts:
+        - asset: GiftHubIcon/TimesNewRoman.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  assets:
-    - assets/images/birthday_cake.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -81,3 +98,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+
+
+
+
