--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   path_provider: ^1.6.11
   http: ^0.12.0+4
   flutter_slidable: ^0.5.7
+  fluttertoast: ^7.1.6
+  cached_network_image: ^2.4.1
+  shared_preferences: ^0.5.12+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
