--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  confetti: ^0.5.4+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,6 +59,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - Assets/google.png
     - assets/images/birthday_cake.jpg
   fonts:
     - family: GiftHubIcon
