--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^1.6.11
   http: ^0.12.0+4
   flutter_slidable: ^0.5.7
+  flappy_search_bar: ^1.7.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
