--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   uses-material-design: true
   assets:
     - Assets/google.png
-    - assets/images/birthday_cake.jpg
+    - Assets/images/birthday_cake.jpg
+    - Assets/Untitled.png
   fonts:
     - family: GiftHubIcon
       fonts:
