--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.8.1
   cupertino_icons: ^1.0.0
   confetti: ^0.5.4+1
+  tuple: ^1.0.3
 
 flutter_icons:
   image_path: "Assets/Untitled.png"
