--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,21 +40,21 @@ dependencies:
   flutter_slidable: ^0.5.7
   device_apps: ^1.2.0
   flappy_search_bar: ^1.7.2
-  flutter_launcher_icons: ^0.8.1
   cupertino_icons: ^1.0.0
   confetti: ^0.5.4+1
   tuple: ^1.0.3
   collection: ^1.14.13
 
-flutter_icons:
-  image_path: "Assets/Gifthub logo.png"
-  android: true
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "Assets/Gifthub logo.png"
+  android: "launcher_icon"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
