--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   confetti: ^0.5.4+1
   tuple: ^1.0.3
   collection: ^1.14.13
+  cached_network_image: ^2.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
