--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fluttertoast: ^7.1.6
   shared_preferences: ^0.5.12+4
   flutter_staggered_animations: "^0.1.2"
+  badges: ^1.1.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
