--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: 0.5.3
-  firebase_auth: ^0.18.1
-  cloud_firestore: ^0.14.1
-  firebase_storage: ^5.0.1
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
+  firebase_storage: ^7.0.0
   google_sign_in: ^4.5.1
   intl: ^0.16.1
   provider: ^4.3.2+2
@@ -49,6 +49,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   flutter_staggered_animations: "^0.1.2"
   badges: ^1.1.6
+  firebase_messaging: ^8.0.0-dev.14
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
