--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   flutter_staggered_animations: "^0.1.2"
   badges: ^1.1.6
+  google_maps_flutter: ^1.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
@@ -75,6 +76,7 @@ flutter:
     - Assets/images/birthday_cake.jpg
     - Assets/Untitled.png
     - Assets/no image product.png
+    - Assets/GoogleMaps.png
   fonts:
     - family: GiftHubIcon
       fonts:
