--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_staggered_animations: "^0.1.2"
   badges: ^1.1.6
   google_maps_flutter: ^1.1.1
+  location: ^3.0.0
+  geocoder: ^0.2.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
