--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_staggered_animations: "^0.1.2"
   badges: ^1.1.6
   firebase_messaging: ^8.0.0-dev.11
-
+  local_auth: ^0.6.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
