--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   path_provider: ^1.6.11
   http: ^0.12.0+4
   flutter_slidable: ^0.5.7
-  device_apps: ^1.2.0
+  url_launcher: ^5.7.10
   flappy_search_bar: ^1.7.2
   cupertino_icons: ^1.0.0
   confetti: ^0.5.4+1
@@ -73,7 +73,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - Assets/google.png
     - Assets/images/birthday_cake.jpg
     - Assets/Untitled.png
     - Assets/no image product.png
