--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: 0.5.3
+  firebase_core: ^0.5.3
   firebase_auth: ^0.18.1
   cloud_firestore: ^0.14.1
   firebase_storage: ^5.0.1
@@ -38,7 +38,7 @@ dependencies:
   path_provider: ^1.6.11
   http: ^0.12.0+4
   flutter_slidable: ^0.5.7
-  device_apps: ^1.2.0
+  url_launcher: ^5.7.10
   flappy_search_bar: ^1.7.2
   cupertino_icons: ^1.0.0
   confetti: ^0.5.4+1
@@ -48,6 +48,9 @@ dependencies:
   fluttertoast: ^7.1.6
   shared_preferences: ^0.5.12+4
   flutter_staggered_animations: "^0.1.2"
+  badges: ^1.1.6
+  firebase_messaging: ^8.0.0-dev.11
+  local_auth: ^0.6.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
@@ -70,7 +73,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - Assets/google.png
     - Assets/images/birthday_cake.jpg
     - Assets/Untitled.png
     - Assets/no image product.png
