--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   geocoder: ^0.2.1
   auto_size_text: ^2.1.0
   pimp_my_button: ^1.0.0
+  geolocator: ^6.1.14
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
